# rust-optimal-transport

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.cargo/: config.toml
.github/workflows/: release-packaging.yaml  rust.yml  test.yaml
benches/: sinkhorn.rs
examples/: README.md
examples/1d_optimal_transport/: main.rs  plot.rs
examples/EMD_2d_gaussian/: plot.rs
examples/emd_2D/: main.rs  plot.rs
examples/emd_2d_gaussian/: main.rs  plot.rs
examples/sinkhorn_1D/: main.rs  plot.rs  plot_1d_mat.py
src/: bregman.rs  error.rs  lib.rs  metrics.rs  ndarray_logical.rs  prelude.rs  unbalanced.rs  utils.rs
src/exact/: ffi.rs  mod.rs  utils.rs
src/lp/: ffi.rs  mod.rs  utils.rs
src/ot/: emd.rs  lp.rs  mod.rs  utils.rs
src/regularized/: greenkhorn.rs  mod.rs  sinkhorn.rs
src/unbalanced/: mod.rs  unbalanced_sinkhorn.rs
tests/: integration_test.rs
