[package]
name = "rust-optimal-transport"
version = "0.1.0"
authors = ["kachark <kkachar@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cxx = "1.0"
thiserror = "1.0"
anyhow = "1.0"
ndarray = "0.15.4"
ndarray_einsum_beta = "0.7.0"
ndarray-linalg = { version = "0.14", features = ["openblas-system"] }
ndarray-stats = "0.5"
ndarray-rand = "0.14"

[build-dependencies]
cxx-build = "1.0"
