[package]
name = "rust-optimal-transport"
version = "0.1.1"
authors = ["kachark <kkachar@hotmail.com>"]
edition = "2018"
repository = "https://github.com/kachark/rust-optimal-transport"
exclude = [
  "assets/*",
  ".github/*",
]

readme = "README.md"
license = "MIT"

description = "A library of optimal transport solvers for Rust"
keywords = ["optimal-transport", "ot", "machine-learning", "optimization", "ai"]
categories = ["algorithms", "mathematics", "science"]

[dependencies]
cxx = "1.0"
thiserror = "1.0"
anyhow = "1.0"
num-traits = "0.2"
ndarray = "0.15.4"
ndarray_einsum_beta = "0.7.0"
ndarray-linalg = { version = "0.14", features = ["openblas-system"] }
ndarray-stats = "0.5"
ndarray-rand = "0.14"

[build-dependencies]
cxx-build = "1.0"

[dev-dependencies]
pyo3 = { version = "0.15.1", features = ["auto-initialize"] }
numpy = "0.15"
criterion = "0.3"
rand = "0.8"

[[example]]
name = "emd_2D"

[[example]]
name = "sinkhorn_1D"

[[bench]]
name = "sinkhorn"
harness = false
